@@ -5,11 +5,33 @@
     packageStartupMessage("Package ", pkgname, " (",ver,") loaded.")
 }
 
-##################################################
-
 ####################################################################
 # A function bodc() to provide bootstrp standard errors for scoring algorithm
 # for the scoring algorithm
+
+
+#' Calculate a distribution-free cut-off value for the scoring algorithm
+#' 
+#' This function constructs cut-off values for the scoring algorithm using
+#' Bootstrap distribution of standard deviation.
+#' 
+#' The function \code{bodc} provides a distribution-free threshold for scoring
+#' algorithm by using the empirical distribution of the standard deviation of
+#' outlying scores.
+#' 
+#' @param object fitted object of class \code{\linkS4class{OutlierDC}}
+#' @param B number of bootstrap resamples for the scoring algorithm. The
+#' default value is 500.
+#' @param q numeric value of probability with values in [0,1].
+#' @param fence a character value to control an outlying fence. three options
+#' are provided. The option \code{"UB"} provides the upper fence to find an
+#' observation who "lived far too long". The option \code{"LB"} provides the
+#' lower fence to find an observation who "died far too early". The option
+#' \code{"both"} provides the upper and lower fences simultaneously.
+#' @seealso \code{\link{OutlierDC-package}} \cr \code{\link{odc}},
+#' \code{\link{JaB}}\cr \code{\link{coef}}, \code{\link{plot}},
+#' \code{\link{show}}, \code{\link{summary}}, \code{\link{update}}
+#' @keywords odc
 bodc <- function(object, B = 500, q = 0.05, fence = c("UB", "LB", "both")){
 
   #####
@@ -91,6 +113,29 @@ bodc <- function(object, B = 500, q = 0.05, fence = c("UB", "LB", "both")){
 ####################################################################
 # A function JaB() to provide the routine for a Jackknife-after-Bootstrap resampling 
 # for the scoring algorithm
+
+
+#' Jackknife-after-Bootstrap resampling for scoring algorithm
+#' 
+#' This function constructs cut-off values for the scoring algorithm using
+#' Jankknife-after-Bootstrap resampling.
+#' 
+#' The function \code{JaB} provides cut-off values for scoring algorithm using
+#' Jackknife-after-Bootstrap resampling techniques.
+#' 
+#' @param object fitted object of class \code{\linkS4class{OutlierDC}}
+#' @param B number of Jackknife-after-Bootstrap resamples for the scoring
+#' algorithm. The default value is 300
+#' @param alpha magnitude of significance
+#' @param fence a character value to control an outlying fence. three options
+#' are provided. The option \code{"UB"} provides the upper fence to find an
+#' observation who "lived far too long". The option \code{"LB"} provides the
+#' lower fence to find an observation who "died far too early". The option
+#' \code{"both"} provides the upper and lower fences simultaneously.
+#' @seealso \code{\link{OutlierDC-package}} \cr \code{\link{odc}},
+#' \code{\link{bodc}} \cr \code{\link{coef}}, \code{\link{plot}},
+#' \code{\link{show}}, \code{\link{summary}}, \code{\link{update}}
+#' @keywords odc
 JaB <- function(object, B = 1000, alpha = 0.05, fence = c("UB", "LB", "both")){
 	#object: OutlierDC object
 	# i: a row mumber for the ith observation based on the rownames() 
